--- BUILD.gn.orig	2020-03-19 21:10:56 UTC
+++ BUILD.gn
@@ -984,6 +984,7 @@ component("skia") {
     "src/ports/SkImageGenerator_skia.cpp",
     "src/ports/SkMemory_malloc.cpp",
     "src/ports/SkOSFile_stdio.cpp",
+    "src/ports/SkDebug_stdio.cpp",
     "src/sfnt/SkOTTable_name.cpp",
     "src/sfnt/SkOTUtils.cpp",
   ]
@@ -1028,7 +1029,6 @@ component("skia") {
   }
 
   if (is_linux || target_cpu == "wasm") {
-    sources += [ "src/ports/SkDebug_stdio.cpp" ]
     if (skia_use_egl) {
       libs += [ "GLESv2" ]
     }
@@ -1040,7 +1040,6 @@ component("skia") {
 
   if (is_mac) {
     sources += [
-      "src/ports/SkDebug_stdio.cpp",
       "src/ports/SkImageEncoder_CG.cpp",
       "src/ports/SkImageGeneratorCG.cpp",
     ]
@@ -1054,7 +1053,6 @@ component("skia") {
 
   if (is_ios) {
     sources += [
-      "src/ports/SkDebug_stdio.cpp",
       "src/ports/SkFontHost_mac.cpp",
       "src/ports/SkImageEncoder_CG.cpp",
       "src/ports/SkImageGeneratorCG.cpp",
@@ -1071,9 +1069,6 @@ component("skia") {
     ]
   }
 
-  if (is_fuchsia) {
-    sources += [ "src/ports/SkDebug_stdio.cpp" ]
-  }
 
   if (skia_enable_spirv_validation) {
     deps += [ "//third_party/spirv-tools:spvtools_val" ]
